--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>tds-explorer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="../static/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../static/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../static/logo.png">
     <script src='https://cdn.jsdelivr.net/npm/@salaku/js-sdk@1.2.6/dist/bundle.js'></script>
   </head>
   <body>
